syntax = "proto3";

import "google/protobuf/empty.proto";

package api;

option go_package = "github.com/wbyatt/rolodex/api";

service Rolodex {
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc List(google.protobuf.Empty) returns (ListResponse);
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    string value = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string value = 1;
}

message KeyValuePair {
    string key = 1;
    string value = 2;
}

message ListResponse {
    repeated KeyValuePair keys = 1;
}